# vcza

./: pyproject.toml
src/vcza/: __init__.py  dvcza.py  ingest_block.py  write_block.py
