[project]
name = "vcza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jake Hagen", email = "jacob.hagen@childrens.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "cyvcf2>=0.31.1",
    "dask-jobqueue>=0.9.0",
    "numcodecs==0.15.1",
    "vcztools>=0.0.1",
    "zarr==2.18.4",
]

[project.scripts]
vcza = "vcza:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "ruff>=0.9.9",
    "setuptools>=75.8.2",
]
